# any2

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  Night.sln  README.md  mise.toml  stylecop.json  test_report.json
.cursor/rules/: global.mdc
.github/: copilot-instructions.md
.github/deactivated/: build-sdl3.yml
.github/workflows/: build-libs.yml  build-sdl3.yml  ci.yml  codeql-analysis.yml  dependency-review.yml  docs.yml  release.yml  scorecard.yml
.roo/rules-code/: rules.md
.windsurf/rules/: rules.md
Night.Engine/runtimes/: sdl3_version.txt
Platform/: CMakeLists.txt  README.md
Platform/include/: night_platform.h
Platform/src/: night_platform.c
docs/: API.md  NOTICE  NOTICE.md  PRD.md  TASKS.md  digest.txt  docfx.json  operational-guidelines.md  support.md  test-refactor.md  testing-plan.md
docs/archive/: epic4.md  epic5.md  epic6.md
docs/docs/: getting-started.md  index.md  introduction.md  toc.yml
docs/epics/: epic10.md  epic3.md  epic4.md  epic5.md  epic6.md  epic7.md  epic8.md  release.md
docs/love2d-api/: 0-roadmap.md  audio.md  data.md  event.md  font.md  graphics.md  image.md  keyboard.md  love2d-testing.txt  mouse.md  physics.md  roadmap.md  sound.md  system.md  timer.md  window.md
lib/SDL3-Prebuilt/: version.txt
licenses/: love2d.documentation.LICENSE.txt
project/: API.md  FrameworkInvestigationGuide.md  NOTICE.md  PRD.md  diff_love_night.md  guidelines.md  love2d_needs.md  macos-manual-testing.md  night-test-prd.md  night-test.md  roadmap.md  test-upgrade.md  testing-guidelines.md  testing-plan.md
project/epics/: epic-testing.md  epic10.md  epic11.md  epic13.md  epic_fix_unmapped_drive_test.md  epic_framework_env_var.md  epic_joystick_callbacks.md  logger-tasks.md  test-tasks.md
project/love2d-api/: roadmap.md
scripts/: download_sdl3.py  get_api.py  sync_sdl3.py  update_api_doc.py  update_sdl3.py  update_tools.py
site/: docfx.json  toc.yml
site/docs/: index.md  toc.yml
src/Night/: CLI.cs  Error.cs  ErrorHandler.cs  Framework.Events.cs  Framework.Run.cs  Framework.cs  FrameworkLoop.cs  Game.cs  IGame.cs  Night.csproj  Types.cs  VersionInfo.cs
src/Night.Engine/: API.cs  DataStructures.cs  Engine.cs  FrameworkLoop.cs  Night.Engine.csproj  NightAPI.cs  Types.cs
src/Night.Platform/: CMakeLists.txt  README.md
src/Night.Platform/src/: night_platform.c
src/Night.SampleGame/: Game.cs  Night.SampleGame.csproj  Player.cs  Program.cs
src/SampleGame/: Game.cs  Night.SampleGame.csproj  Player.cs  Program.cs  SampleGame.csproj  SamplePlatformerGame.cs  config.json
tests/: BaseTestCase.cs  Game.cs  ITestCase.cs  ITestModule.cs  ITestScenario.cs  NightTest.csproj  Program.cs  TestGame.csproj  TestReporter.cs  TestRunner.cs  TestTypes.cs  app.manifest  config.json  coverage.opencover.xml  stylecop.json
tests/Core/: BaseGameTestCase.cs  BaseManualTestCase.cs  BaseTestCase.cs  GameTestCase.cs  ITestCase.cs  ITestGroup.cs  ManualTestCase.cs  ModTestCase.cs  SequentialTestCollection.cs  TestGroup.cs  TestRunner.cs  TestTypes.cs  XUnitLogSink.cs  XunitLogSink.cs
tests/Groups/: DummyGroup.cs  GraphicsGroup.cs  TimerGroup.cs
tests/Modules/: DummyGroup.cs  (+4 more)
tools/: manifest.json
(+210 files in other folders)
